<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="mainEmail">Email Address</string>
    <string name="mainPassword">Password</string>
    <string name="mainLogin">Login</string>
    <string name="mainRegister">Register</string>
    <string name="registerPage">Register Page</string>
    <string name="registerFName">First Name</string>
    <string name="registerLName">Last Name</string>
    <string name="registerEMail">Email Address</string>
    <string name="registerPassword">Password</string>
    <string name="registerRePassword">Confirm Password</string>
    <string name="registerNextPage">Next Page</string>
    <string name="registerCancel">Cancel</string>
    <string name="registerLifeStyle">Life Style</string>
    <string name="finishRegistration">Finish Registration</string>
    <string name="cancel">Cancel</string>
    <string name="aboutPopupAuthor">Author(s):</string>
    <string name="aboutPopupVersion">Version:</string>
    <string name="aboutPopupVersionN">1.0</string>
    <string name="aboutPopupInstruct">Instructions:</string>
    <string name="aboutPopupNames">Alan, Connor, Harlan, Sam, Warssay</string>
    <string name="aboutPopupSteps">1. Register if you do not have an account yet\n2. When registering make sure to fill out the questionnaire\n3. After you finish registration, you can login \n4. There will be 5 icons at the top to help you navigate (Left to Right):\n
    a. Home Page\n
    b. Details Page\n
    c. Enter Data Page\n
    d. Breakdown Page\n
    e. Settings Page/Logout</string>
    <string name="generalClose">Close</string>
    <string name="adultStyleOwnCar">Do you own a Car?</string>
    <string name="adultStyleCarInsurance">Monthly car insurance cost:</string>
    <string name="perMonth">$/Month</string>
    <string name="adultStyleGas">Monthly gas cost estimate:</string>
    <string name="adultStyleProperty">Do you own a property?</string>
    <string name="adultStylePropertyInsurance">Monthly property insurance cost:</string>
    <string name="adultStyleMortgage">Are you currently paying off a mortgage?</string>
    <string name="adultStyleRent">Are you currently renting a property?</string>
    <string name="adultStyleHealth">Are you paying for health/life insurance?</string>
    <string name="adultStyleIncome">Do you have a source of income?</string>
    <string name="adultStyleMonthlyIncome">Estimated monthly income:</string>
    <string name="adultStyleDependencies">Do you have any dependencies?</string>
    <string name="adultStyleChildren">Children?</string>
    <string name="adultStyleFamily">Family?</string>
    <string name="adultStylePets">Pets?</string>
    <string name="adultStyleOthers">Others?</string>
    <string name="adultStyleMonthlyDepend">Estimated monthly spending (dependencies/leisure/other):</string>
    <string name="adultStyleDebt">Are you paying off any debt?</string>
    <string name="breakdownTitle">Monthly Breakdown</string>
    <string name="businessStyleVehicle">Do you have company vehicle(s)?</string>
    <string name="businessStyleGas">Gas:</string>
    <string name="businessStyleInsurance">Insurance:</string>
    <string name="businessStyleSupplies">Supplies/Equipment:</string>
    <string name="businessStyleWages">Wages:</string>
    <string name="businessStyleAdvertising">Advertising:</string>
    <string name="businessStyleUtilities">Utilities/Services:</string>
    <string name="businessStyleTaxes">Taxes:</string>
    <string name="businessStyleIncome">Business Income:</string>
    <string name="elderlyStylePension">Do you have a pension?</string>
    <string name="elderlyStyleIncome">Do you receive any other income?</string>
    <string name="elderlyStyleMortgage">Do you pay for Rent/Mortgage(utilities included)?</string>
    <string name="elderlyStyleHealth">Do you pay for Health/Life Insurance?</string>
    <string name="elderlyStyleTransit">Do you use any types of transit?</string>
    <string name="elderlyStyleCar">Do you own a Car?</string>
    <string name="elderlyStyleInsurance">Insurance?</string>
    <string name="elderlyStyleGas">Gas?</string>
    <string name="elderlyStyleGroceries">Do you buy your own groceries?</string>
    <string name="elderlyStyleMisc">How much do you spend on other expenses (ex. leisure)?</string>
    <string name="detailsPageExtra">Extra Info:</string>
    <string name="detailsPageAmount">Amount:</string>
    <string name="detailsPageAddData">Add Data</string>
    <string name="detailsPageSpending">Spending Type:</string>
    <string name="detailsPageMoney">$</string>
    <string name="detailsPageTitle">Enter Spending Data</string>
    <string name="homeScreenWelcome">Welcome Message To</string>
    <string name="homeScreenDate">Date</string>
    <string name="homeScreenNetB">Net Budget</string>
    <string name="homeScreenSpending">Spending</string>
    <string name="homeScreenCurSpending">Current Spending</string>
    <string name="homeScreenMoney">$0</string>
    <string name="settingsLName">Last Name</string>
    <string name="settingsFName">First Name</string>
    <string name="settingsPw">Password</string>
    <string name="settingsSave">Save Information</string>
    <string name="settingsDelete">Delete Account</string>
    <string name="settingsTitle">Settings</string>
    <string name="studentStyleCar">Do you own a Car?</string>
    <string name="studentStyleInsurance">Insurance?</string>
    <string name="studentStyleGas">Gas?</string>
    <string name="studentStyleRent">Do you pay Rent (Includes utilities)?</string>
    <string name="studentStyleTuition">Do you pay for Tuition?</string>
    <string name="studentStyleJob">Do you have a Job?</string>
    <string name="studentStyleDepend">Do you have any Dependencies?</string>
    <string name="studentStyleChildren">Children?</string>
    <string name="studentStylePets">Pets?</string>
    <string name="studentStyleLoans">Do you have any loans?</string>
    <string name="studentStyleTransit">Do use any types of transit?</string>
    <string name="deletePopupText">Are you sure you want to delete this account?</string>
    <string name="deletePopupYes">Yes</string>
    <string name="deletePopupCancel">Cancel</string>
    <string name="extraPopupType">Type of Purchase:</string>
    <string name="extraPopupSpent">Amount Spent:</string>
    <string name="extraPopupDesc">Description:</string>
    <string name="extraPopupDelete">Delete</string>
    <string name="fragNeedsRecurring">Recurring Spending</string>
    <string name="fragNeedsWeekly">Weekly Spending</string>
    <string name="fragNeedsDaily">Daily Spending</string>
    <string name="fragNeedsMonthly">Monthly Spending</string>
    <string name="fragNeedsYearly">Yearly Spending</string>
    <string name="fragWantsTitle">Income Vs. Spending</string>
    <string name="fragWantsNetWeekly">Net Weekly:</string>
    <string name="fragWantsNetDaily">Net Daily:</string>
    <string name="fragWantsNetMonthly">Net Monthly:</string>
    <string name="fragWantsNetYearly">Net Yearly:</string>
    <string name="dataPopupType">Type of Purchase:</string>
    <string name="dataPopupAmount">Amount Spent:</string>
    <string name="dataPopupMod">Modify</string>
    <string name="generalHome">Home</string>
    <string name="directoryMainDetails">Details Page</string>
    <string name="directoryEnterData">Enter Data</string>
    <string name="directoryBreakdown">Breakdown Page</string>
    <string name="directorySettings">Settings</string>
    <string name="directoryLog">Log Out</string>
    <string name="spendingDetails">Spending Details</string>

    <string-array name="lifeStyles">
        <item>Adult</item>
        <item>Student</item>
        <item>Elderly</item>
        <item>Business</item>
    </string-array>

    <string-array name="spendingTypeStudent">
        <item>Groceries</item>
        <item>Rent</item>
        <item>Leisure</item>
        <item>Tuition</item>
        <item>Loans</item>
        <item>Transit</item>
        <item>Gas Money</item>
        <item>Other</item>
    </string-array>

    <string-array name="spendingTypeAdult">
        <item>Groceries</item>
        <item>Mortgage</item>
        <item>Leisure</item>
        <item>Health/Life Insurance</item>
        <item>Dependencies</item>
        <item>Transit</item>
        <item>Gas Money</item>
        <item>Other</item>
    </string-array>

    <string-array name="spendingTypeElderly">
        <item>Groceries</item>
        <item>Mortgage</item>
        <item>Leisure</item>
        <item>Health/Life Insurance</item>
        <item>Dependencies</item>
        <item>Transit</item>
        <item>Gas Money</item>
        <item>Other</item>
    </string-array>

    <string-array name="spendingTypeBusiness">
        <item>Supplies/Equipment</item>
        <item>Wages</item>
        <item>Advertising</item>
        <item>Utilities/Services</item>
        <item>Taxes</item>
        <item>Company Vehicles</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

