<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:rowCount="5"
    android:id="@+id/business"
    tools:context=".BusinessStyleActivity">

    <Switch
        android:id="@+id/sw_Business_Vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:text="@string/businessStyleVehicle"
        android:textSize="20sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_Business_Vehicle_Gas_Label"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/businessStyleGas"
        android:textSize="30sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edt_Business_Vehicle_Gas"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:hint="@string/perMonth"
        android:textSize="18sp"
        android:visibility="invisible"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_Business_Vehicle_Insurance_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="180dp"
        android:text="@string/businessStyleInsurance"
        android:textSize="30sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edt_Business_Vehicle_Insurance"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:hint="@string/perMonth"
        android:textSize="18sp"
        android:visibility="invisible"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_Business_Supplies_Label"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:text="@string/businessStyleSupplies"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_Business_Supplies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:hint="@string/perMonth"
        android:inputType="numberDecimal"
        android:text=""
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_Business_Wages_Label"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="120dp"
        android:text="@string/businessStyleWages"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_Business_Wages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="120dp"
        android:inputType="numberDecimal"
        android:hint="@string/perMonth"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_Business_Advertising_Label"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="160dp"
        android:text="@string/businessStyleAdvertising"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_Business_Advertising"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="160dp"
        android:hint="@string/perMonth"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_Business_Utilities_Label"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="200dp"
        android:text="@string/businessStyleUtilities"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_Business_Utilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:inputType="numberDecimal"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:hint="@string/perMonth"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_Business_Taxes_Label"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="240dp"
        android:text="@string/businessStyleTaxes"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_Business_Taxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="240dp"
        android:inputType="numberDecimal"
        android:hint="@string/perMonth"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_Business_Income_Label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="340dp"
        android:text="@string/businessStyleIncome"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_Business_Income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="340dp"
        android:inputType="numberDecimal"
        android:hint="@string/perMonth"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btn_Business_Finish_Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="199dp"
        android:text="@string/finishRegistration" />

    <Button
        android:id="@+id/btn_Business_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel" />

</RelativeLayout>